--- a/science/index.html
+++ b/science/index.html
@@ -12,7 +12,7 @@
   	<h1>Science and Chess</h1>
   </div>
   <div class="nav">
-    <h3><a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">Science and Chess</a> 
+    <h3><a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">Science and Chess</a></h3>
   </div>
   <div class="content">
 	  Science and Chess!
