--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   	<h1>Ryan's ECS Portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="ecs/index.html">ECS</a></h3>
+    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="ecs/index.html">Science and Chess</a></h3>
   </div>
   <div class="content">
-	  Hello World!
+	  <img src="images/welcome.jpg" alt="Welcome" width="960" height="500">
   </div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
