--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<h1>Ryan's ECS Portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="ecs/index.html">Science and Chess</a></h3>
+    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="science/index.html">Science and Chess</a></h3>
   </div>
   <div class="content">
 	  <img src="images/welcome.png" alt="Welcome" width="960" height="500">
