--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
 	  <h3>Skills</h3>  
    	 <ol>
   		<li>Typing 85WPM</li>
-  		<li>Tea</li>
+  		<li>Debate</li>
   		<li>Math</li>
    	 </ol>
 	  <h3>Interests</h3> 
