--- a/science/index.html
+++ b/science/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title>Science and Chess</title>
+	<title>Science</title>
 	<link href="../myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -15,7 +15,9 @@
     <h3><a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">Science</a></h3>
   </div>
   <div class="content">
-	  Science!
+	  Science! Science is a pretty cool topic that has many interesting things and can have some very fun categories you can research further upon including: Physics, Biology, Chemistry, Computer Science, and a lot more! Personally I really enjoy Chemistry and Physics as well.
+	  I have done Science Bowl, read about sciences and have watched interesting videos as well. Sometimes it can get a little tidious, but overall can be very fun and very useful.
+	  I started kind of enjoying science from 5th grade and then started to enjoy it more up until now.
   </div>
   <div class="footer">
      <h4><a href="../aboutme.html">About Me</a> | <a href="mailto:ryanli9710@granitesd.org">Contact</a> | Copyright 2023</h4>
