--- a/ecs/index.html
+++ b/ecs/index.html
@@ -18,7 +18,7 @@
 	  <h3>ECS Project Links</h3>
 	  <ul> 
 		  <li>Typing Test Results </li>
-		  <li>AI Project | <a href="Culturedmeat.pdf">PDF</a>| <a href="Culturedmeat.pdf">PPTX</a></li>
+		  <li>AI Project | <a href="Culturedmeat.pdf">PDF</a>| <a href="Culturedmeat.pptx">PPTX</a> </li>
 		  <li>Coding Project </li>
 		  <li>Certifications </li>		  		  		  
 	  </ul> 
