--- a/ecs/index.html
+++ b/ecs/index.html
@@ -22,7 +22,7 @@
 		  <li>Coding Project </li>
 		  <li>Certifications </li>
 		  <li>Project: Timeline | <a href=https://github.com/Bananacoder23/ECSPortfolio/blob/main/ecs/Timeline/Timeline.pde</a> </li>
-		  <li>Project: Etch-a-Sketch | <a href=https://github.com/Bananacoder23/ECSPortfolio/blob/main/ecs/Etch-A-Sketch/EtchASketch/EtchASketch.pde</a> </li>
+		  <li>Project: Etch-a-Sketch | <a href=https://github.com/Bananacoder23/ECSPortfolio/tree/main/ecs/Etch-A-Sketch/EtchASketch</a> </li>
 	  </ul> 
   </div>
   <div class="footer">
