--- a/ecs/index.html
+++ b/ecs/index.html
@@ -19,10 +19,9 @@
 	  <ul> 
 		  <li>Typing Test Results </li>
 		  <li>AI Project | <a href="Culturedmeat.pdf">PDF</a>| <a href="Culturedmeat.pptx">PPTX</a> </li>
-		  <li>Coding Project </li>
+		  <li>Coding Project: Timeline | <a href="https://github.com/Bananacoder23/ECSPortfolio/tree/main/ecs/Timeline"</a> </li>
+		  <li>Coding Project: Etch-a-Sketch | <a href="https://github.com/Bananacoder23/ECSPortfolio/tree/main/ecs/Etch-A-Sketch/EtchASketch"</a> </li>
 		  <li>Certifications </li>
-		  <li>Project: Timeline | <a href=https://github.com/Bananacoder23/ECSPortfolio/blob/main/ecs/Timeline/Timeline.pde</a> </li>
-		  <li>Project: Etch-a-Sketch | <a href=https://github.com/Bananacoder23/ECSPortfolio/tree/main/ecs/Etch-A-Sketch/EtchASketch</a> </li>
 	  </ul> 
   </div>
   <div class="footer">
