--- a/ecs/index.html
+++ b/ecs/index.html
@@ -20,9 +20,9 @@
 		  <li>Typing Test Results </li>
 		  <li>AI Project | <a href="Culturedmeat.pdf">PDF</a> | <a href="Culturedmeat.pptx">PPTX</a> </li>
 		  <li>Certifications  
-		  <li>Coding Project: Timeline <a href="https://github.com/Bananacoder23/ECSPortfolio/tree/main/ecs/Timeline">Timeline</a></li>
-		  <li>Coding Project: Etch-A-Sketch <a href="https://github.com/Bananacoder23/ECSPortfolio/tree/main/ecs/Etch-A-Sketch/EtchASketch">Etch-A-Sketch</a></li>
-		  <li>Coding Project: Dodge Frog <a href="https://github.com/Bananacoder23/ECSPortfolio/tree/main/ecs/Dodge_Frog">Dodge Frog</a></li>
+		  <li>Coding Project: Timeline | <a href="https://github.com/Bananacoder23/ECSPortfolio/tree/main/ecs/Timeline">Timeline</a></li>
+		  <li>Coding Project: Etch-A-Sketch | <a href="https://github.com/Bananacoder23/ECSPortfolio/tree/main/ecs/Etch-A-Sketch/EtchASketch">Etch-A-Sketch</a></li>
+		  <li>Coding Project: Dodge Frog | <a href="https://github.com/Bananacoder23/ECSPortfolio/tree/main/ecs/Dodge_Frog">Dodge Frog</a></li>
 	  </ul> 
   </div>
   <div class="footer">
