--- a/ecs/index.html
+++ b/ecs/index.html
@@ -17,9 +17,13 @@
   <div class="content">
 	  <h3>ECS Project Links</h3>
 	  <ul> 
-		  <li>Typing Test Results </li>
+		 
 		  <li>AI Project | <a href="Culturedmeat.pdf">PDF</a> | <a href="Culturedmeat.pptx">PPTX</a> </li>
-		  <li>Certifications  
+		  <li>Certifications:
+		  	<li>Typing Test Results: 85WPM (5 Minute Test)
+		  	<li>Completed Code.org HTML Course
+			<li>State Certification Test: 
+			 
 		  <li>Coding Project: Timeline | <a href="https://github.com/Bananacoder23/ECSPortfolio/tree/main/ecs/Timeline">Timeline</a></li>
 		  <li>Coding Project: Etch-A-Sketch | <a href="https://github.com/Bananacoder23/ECSPortfolio/tree/main/ecs/Etch-A-Sketch/EtchASketch">Etch-A-Sketch</a></li>
 		  <li>Coding Project: Dodge Frog | <a href="https://github.com/Bananacoder23/ECSPortfolio/tree/main/ecs/Dodge_Frog">Dodge Frog</a></li>
